--- a/css/style.css
+++ b/css/style.css
@@ -110,9 +110,25 @@ body{
     cursor: pointer;
 }
 @media only screen and (max-width: 375px) {
+   
     .main {
      display: flex;
      flex-direction: column;
      justify-content: center;
+     width: 100%;
+     height: 100vh;
+     border-radius: 10px;
+     overflow: hidden;
+     margin: 10px;
+    }
+    .main .left{
+        width: 100%;
+        height: 50%;
+    }
+    .main .right{
+        width: 100%;
+    }
+    .main .right button{
+        width: 100%;
     }
   }
